[gd_scene load_steps=40 format=2]

[ext_resource path="res://Scenes/UserInterface/UIContainer.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UserInterface/GoldTextures/1.png" type="Texture" id=2]
[ext_resource path="res://Scenes/UserInterface/GoldTextures/2.png" type="Texture" id=3]
[ext_resource path="res://Scenes/UserInterface/GoldTextures/3.png" type="Texture" id=4]
[ext_resource path="res://Scenes/UserInterface/GoldTextures/4.png" type="Texture" id=5]
[ext_resource path="res://Scenes/UserInterface/GoldTextures/5.png" type="Texture" id=6]
[ext_resource path="res://Scenes/UserInterface/GoldTextures/6.png" type="Texture" id=7]
[ext_resource path="res://Scenes/UserInterface/GoldTextures/7.png" type="Texture" id=8]
[ext_resource path="res://Scenes/UserInterface/GoldTextures/8.png" type="Texture" id=9]
[ext_resource path="res://Scenes/UserInterface/GoldTextures/9.png" type="Texture" id=10]
[ext_resource path="res://Scenes/UserInterface/GoldTextures/10.png" type="Texture" id=11]
[ext_resource path="res://Scenes/UserInterface/GoldTextures/11.png" type="Texture" id=12]
[ext_resource path="res://Scenes/UserInterface/GoldTextures/12.png" type="Texture" id=13]
[ext_resource path="res://Fonts/SHPinsher_24.tres" type="DynamicFont" id=14]
[ext_resource path="res://Scenes/UserInterface/ExpTextures/1.png" type="Texture" id=15]
[ext_resource path="res://Scenes/UserInterface/ExpTextures/2.png" type="Texture" id=16]
[ext_resource path="res://Scenes/UserInterface/ExpTextures/3.png" type="Texture" id=17]
[ext_resource path="res://Scenes/UserInterface/ExpTextures/4.png" type="Texture" id=18]
[ext_resource path="res://Scenes/UserInterface/SilverMoonTextures/1.png" type="Texture" id=19]
[ext_resource path="res://Scenes/UserInterface/SilverMoonTextures/2.png" type="Texture" id=20]
[ext_resource path="res://Scenes/UserInterface/SilverMoonTextures/3.png" type="Texture" id=21]
[ext_resource path="res://Scenes/UserInterface/SilverMoonTextures/4.png" type="Texture" id=22]
[ext_resource path="res://Scenes/UserInterface/SilverMoonTextures/5.png" type="Texture" id=23]
[ext_resource path="res://Scenes/UserInterface/SilverMoonTextures/6.png" type="Texture" id=24]
[ext_resource path="res://Scenes/UserInterface/SilverMoonTextures/7.png" type="Texture" id=25]
[ext_resource path="res://Scenes/UserInterface/SilverMoonTextures/8.png" type="Texture" id=26]
[ext_resource path="res://Scenes/UserInterface/SilverMoonTextures/9.png" type="Texture" id=27]
[ext_resource path="res://Scenes/UserInterface/SilverMoonTextures/10.png" type="Texture" id=28]
[ext_resource path="res://Scenes/UserInterface/SilverMoonTextures/11.png" type="Texture" id=29]
[ext_resource path="res://Scenes/UserInterface/SilverMoonTextures/12.png" type="Texture" id=30]
[ext_resource path="res://Fonts/SHPinsher_16.tres" type="DynamicFont" id=31]
[ext_resource path="res://Scripts/StaminaSystem.gd" type="Script" id=32]
[ext_resource path="res://Scenes/UserInterface/AnimatedCheckButton.tscn" type="PackedScene" id=33]
[ext_resource path="res://Scenes/UserInterface/BottomBar/Skills/ActiveSpellsManager.gd" type="Script" id=34]
[ext_resource path="res://Scenes/UserInterface/BottomBar/Skills/SpeedupBtn.tscn" type="PackedScene" id=35]
[ext_resource path="res://Objects/Potions/Health/HealthPotion.tscn" type="PackedScene" id=36]

[sub_resource type="Animation" id=1]
resource_name = "gold_reached"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "xp_reached"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 15 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "silver_moon_reached"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 19 ) ]
}

[node name="UIContainer" type="CanvasLayer"]
layer = 127
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1.0

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 549.0
margin_bottom = 290.0
custom_constants/separation = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
margin_right = 539.0
margin_bottom = 238.0
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 177.0
margin_bottom = 238.0
size_flags_horizontal = 3
custom_constants/separation = -15

[node name="GoldRow" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_right = 177.0
margin_bottom = 48.0

[node name="GoldIcon" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/GoldRow"]
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/GoldRow/GoldIcon"]
anims/gold_reached = SubResource( 1 )

[node name="GoldLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/GoldRow"]
margin_left = 52.0
margin_top = 9.0
margin_right = 62.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 14 )
text = "0"

[node name="XpRow" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
visible = false
margin_top = 33.0
margin_right = 177.0
margin_bottom = 81.0

[node name="XpIcon" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/XpRow"]
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/XpRow/XpIcon"]
anims/xp_reached = SubResource( 2 )

[node name="XpLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/XpRow"]
margin_left = 52.0
margin_top = 9.0
margin_right = 62.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 14 )
text = "0"

[node name="SilverMoonRow" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 33.0
margin_right = 177.0
margin_bottom = 81.0

[node name="SilverMoonIcon" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/SilverMoonRow"]
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 19 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/SilverMoonRow/SilverMoonIcon"]
anims/silver_moon_reached = SubResource( 3 )

[node name="SilverMoonLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/SilverMoonRow"]
margin_left = 52.0
margin_top = 9.0
margin_right = 62.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 14 )
text = "0"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 181.0
margin_right = 358.0
margin_bottom = 238.0
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 177.0
margin_bottom = 20.0

[node name="LevelLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/CenterContainer"]
margin_left = 61.0
margin_right = 116.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 31 )
text = "Poziom 10"

[node name="CenterContainer2" type="CenterContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 24.0
margin_right = 177.0
margin_bottom = 44.0

[node name="KilledDwarvesLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/CenterContainer2"]
margin_left = 74.0
margin_right = 103.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 31 )
text = "1 / 5"

[node name="StaminaLab" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 48.0
margin_right = 177.0
margin_bottom = 78.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "9.9s / 10s"
align = 1
valign = 1
script = ExtResource( 32 )

[node name="VBoxContainer3" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 362.0
margin_right = 539.0
margin_bottom = 238.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer3"]
margin_left = 83.0
margin_right = 177.0
margin_bottom = 47.0
size_flags_horizontal = 8
custom_constants/separation = 0

[node name="TavernEnterBtn" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer3/VBoxContainer2" instance=ExtResource( 33 )]
margin_left = 13.0
margin_right = 94.0
size_flags_horizontal = 8

[node name="TavernLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer3/VBoxContainer2"]
margin_top = 27.0
margin_right = 94.0
margin_bottom = 47.0
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 31 )
text = "Wejdz do tawerny"
align = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer3"]
margin_left = 88.0
margin_top = 57.0
margin_right = 177.0
margin_bottom = 104.0
size_flags_horizontal = 8
custom_constants/separation = 0

[node name="RevivalEnterBtn" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer3/VBoxContainer" instance=ExtResource( 33 )]
margin_left = 8.0
margin_right = 89.0
size_flags_horizontal = 8

[node name="RevivalEnterLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer3/VBoxContainer"]
margin_top = 27.0
margin_right = 89.0
margin_bottom = 47.0
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 31 )
text = "Przywolaj diabla"
align = 2

[node name="BottomBar" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
margin_top = 248.0
margin_right = 539.0
margin_bottom = 280.0

[node name="ActiveSpells" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer/BottomBar"]
margin_right = 177.0
margin_bottom = 32.0
size_flags_horizontal = 3
script = ExtResource( 34 )

[node name="SpeedupBtn" parent="Control/MarginContainer/VBoxContainer/BottomBar/ActiveSpells" instance=ExtResource( 35 )]
margin_right = 29.0
margin_bottom = 32.0

[node name="Potions" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer/BottomBar"]
margin_left = 181.0
margin_right = 358.0
margin_bottom = 32.0
size_flags_horizontal = 3
alignment = 1

[node name="HealthPotion" parent="Control/MarginContainer/VBoxContainer/BottomBar/Potions" instance=ExtResource( 36 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 0 )
rect_scale = Vector2( 1, 1 )

[node name="Margin" type="Control" parent="Control/MarginContainer/VBoxContainer/BottomBar"]
margin_left = 362.0
margin_right = 539.0
margin_bottom = 32.0
size_flags_horizontal = 3
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer3/VBoxContainer2/TavernEnterBtn" to="." method="_on_TavernEnterBtn_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer3/VBoxContainer/RevivalEnterBtn" to="." method="_on_RevivalEnterBtn_pressed"]
